used ellipsis to fix card preview behavior when the name of the character is too big to fit in 1 line

--- a/src/components/CardPreview/style.css
+++ b/src/components/CardPreview/style.css
@@ -44,4 +44,13 @@
 .c-cardPreview__name {
     font-size: 20px;
     text-align: center;
+    white-space: nowrap;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.c-cardPreview__nameForCardDetails {
+    font-size: 20px;
+    text-align: center;
 }
